# Multilingual-IME

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data_preprocess/: keystroke_converter.py  typo_generater.py
documents/: README.md
multilingual_ime/: candidate.py  character.py  cli_ime.py  deep_models.py  ime.py  ime_converter.py  ime_detector.py  ime_handler.py  ime_phase1_train.py  ime_separator.py  key_event_handler.py  key_event_processor.py  keystroke_map_db.py  keystroke_tokenizer.py  multi_config.py  muti_config.py  muti_ime.py  phrase_db.py  sentence_graph.py  trie.py
reports/: ime_converter_test_result_2024-08-08-02-02.txt  ime_separator_converter_test_result_2024-08-06-13-58.txt  ime_separator_converter_test_result_2024-08-07-03-39.txt  ime_separator_converter_test_result_2024-08-07-17-12.txt  ime_separator_converter_test_result_2024-08-12-17-12.txt  ime_separator_converter_test_result_2024-08-12-17-55.txt  ime_separator_converter_test_result_2024-08-12-18-00.txt  ime_separator_converter_test_result_2024-08-12-18-14.txt  ime_separator_converter_test_result_2024-08-12-18-18.txt  ime_separator_converter_test_result_2024-08-12-18-31.txt  ime_separator_test_result_2024-07-30-15-27.txt  ime_separator_test_result_2024-07-31-00-09.txt  ime_separator_test_result_2024-08-03-22-16.txt  ime_separator_test_result_2024-08-04-22-46.txt  ime_separator_test_result_2024-08-05-23-39.txt  ime_separator_test_result_2024-08-05-23-40.txt  ime_separator_test_result_2024-08-31-00-52.txt  ime_separator_test_result_2024-08-31-01-01.txt  system_test_all.csv  (+1 more)
(+50 files in other folders)
