[tool.poetry]
name = "multilingual-ime"
version = "0.1.0"
description = ""
authors = ["JY <90738099+JY9150@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.1"
tqdm = "^4.66.4"
pypinyin = "^0.51.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
